# harvestweb

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/harvestweb/: __init__.py  __main__.py
src/harvestweb/cli/: __init__.py  main.py
src/harvestweb/core/: __init__.py  firecrawl.py  review.py
src/webharvest/: __init__.py  __main__.py
src/webharvest/cli/: __init__.py  main.py
src/webharvest/core/: __init__.py  firecrawl.py  review.py
tests/: test_firecrawl.py  test_review.py
