[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "harvestweb"
version = "0.1.0"
description = "Multi-provider website review and Firecrawl CLI for repo-local research bundles"
authors = [{name = "OuCodes"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["firecrawl", "crawl4ai", "website", "scraping", "review", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.13",
    "markitdown>=0.1.2",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/OuCodes/harvestweb"
Repository = "https://github.com/OuCodes/harvestweb"
Issues = "https://github.com/OuCodes/harvestweb/issues"
Changelog = "https://github.com/OuCodes/harvestweb/blob/main/CHANGELOG.md"

[project.optional-dependencies]
crawl4ai = [
    "crawl4ai>=0.8.6",
]
dev = [
    "build>=1.2",
    "pylint>=3.3",
    "pytest>=8.4",
    "pytest-cov>=5.0",
]

[project.scripts]
harvestweb = "harvestweb.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/harvestweb"]
